--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <app-menu></app-menu>
 </div>
 <div style=" margin-top: 95px; width: 929px;">
-
+<app-subscriber></app-subscriber>
 </div>
 </div>
 <router-outlet></router-outlet>
