--- a/src/app/components/subscriber/subscriber/subscriber.component.html
+++ b/src/app/components/subscriber/subscriber/subscriber.component.html
@@ -1,21 +1,25 @@
 <div class="ui-g">
-    <p-panel header="Gestion de subscribers" [style]="{'width':'70%'}">
+    <p-toast></p-toast>
+    <p-confirmDialog header="Confirmation" acceptLabel="Oui" rejectLabel="Non" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+    <p-panel header="Gestion de subscribers" [style]="{'width':'80%'}">
         <div style="margin-bottom: 20px;">
             <p-menubar [model]="items"></p-menubar>
         </div>
-        <p-table [value]="subscribers" [columns]="cols" [paginator]="true" [rows]="10">
+        <p-table [value]="subscribers" [columns]="cols" selectionMode="single" [(selection)]="selectedSubscriber" 
+        dataKey="num_sim" [paginator]="true" [rows]="10">
             <ng-template pTemplate="header" let-columns>
                 <tr>
-                    <th *ngFor="let col of columns">
+                    <th *ngFor="let col of columns" [pSortableColumn]="col.field">
                         {{col.header}}
+                        <p-sortIcon [field]="col.field" ariaLabel="Activate to sort" ariaLabelDesc="Activate to sort in descending order" arialLabelAsc="Activate to sort in ascending order" ></p-sortIcon>
                     </th>
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-subscriber let-columns="columns">
-                <tr>
+                <tr [pSelectableRow]="subscriber"> 
                     <td *ngFor="let col of columns">
                         {{subscriber[col.field]}}
-                    </td>>
+                    </td>
                 </tr>
             </ng-template>
         </p-table>
