--- a/src/app/components/subscriber/subscriber/subscriber.component.html
+++ b/src/app/components/subscriber/subscriber/subscriber.component.html
@@ -5,8 +5,8 @@
         <div style="margin-bottom: 20px;">
             <p-menubar [model]="items"></p-menubar>
         </div>
-        <p-table [value]="subscribers" [columns]="cols" selectionMode="single" [(selection)]="selectedSubscriber" 
-        dataKey="num_sim" [paginator]="true" [rows]="10">
+        <p-table [value]="subscribers" [columns]="cols" selectionMode="single" [(selection)]="subscriber" 
+        dataKey="num_sim" [paginator]="true" [rows]="4" >
             <ng-template pTemplate="header" let-columns>
                 <tr>
                     <th *ngFor="let col of columns" [pSortableColumn]="col.field">
@@ -35,7 +35,7 @@
                         <label for="nom_sub">Nom</label>
                     </div>
                     <div class="ui-g-8">
-                        <input pInputText id="nom_sub" [(ngModel)]="subscriber.nom_sub" required />
+                        <input pInputText id="nom_sub" [(ngModel)]="subscriber.nom_sub" required/>
                     </div>
                 </div>
             </div>
@@ -46,18 +46,17 @@
                         <label for="prenom_sub">Prénom</label>
                     </div>
                     <div class="ui-g-8">
-                        <input pInputText id="prenom_sub" [(ngModel)]="subscriber.prenom_sub" required />
+                        <input pInputText id="prenom_sub" [(ngModel)]="subscriber.prenom_sub" required/>
                     </div>
                 </div>
             </div>
 
             <div class="ui-g ui-fluid">
                 <div class="ui-g-12">
-                    <div class="ui-g-4">
-                        <label for="num_sim">Numéro SIM</label>
-                    </div>
                     <div class="ui-g-8">
-                        <input pInputText id="num_sim" [(ngModel)]="subscriber.num_sim" required />
+                        <label for="integeronly">Numéro SIM</label>
+                        <p-inputNumber inputId="num_sim" [(ngModel)]="subscriber.num_sim">
+                        </p-inputNumber>
                     </div>
                 </div>
             </div>
