--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,3 +7,8 @@ app-menu{
 .p-panel .p-panel-header{
     background-color: #86bff9;
 }
+
+body{
+    background-image: url("https://visme.co/blog/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-08.jpg") !important;
+
+}
