--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,6 +1,6 @@
 
 
-<p-panelMenu [transitionOptions]="'1ms'" [model]="items"  [style]="{'width':'300px','background':'#f8f9fa', 'border':'2px solid' ,'border-top':'0px', 'height':'627px' , 'border-right-color':'rgb(134 191 249)','border-bottom-color':'rgb(134 191 249)','border-left-color':'rgb(134 191 249)'}" class="panel" >
+<p-panelMenu [transitionOptions]="'1ms'" [model]="items"  [style]="{'width':'300px','background':'#f8f9fa', 'border':'2px solid' ,'border-top':'0px', 'height':'627px' , 'border-right-color':'rgb(134 191 249)','border-bottom-color':'rgb(134 191 249)','border-left-color':'rgb(134 191 249)','position':'fixed','top':'70px'}" class="panel" >
 
 </p-panelMenu>
 
