--- a/src/app/components/subscriber/subscriber/subscriber.component.html
+++ b/src/app/components/subscriber/subscriber/subscriber.component.html
@@ -32,10 +32,10 @@
             <div class="ui-g ui-fluid">
                 <div class="ui-g-12">
                     <div class="ui-g-4">
-                        <label for="nom_sub">Nom</label>
+                        <label for="nom_subscriber">Nom</label>
                     </div>
                     <div class="ui-g-8">
-                        <input pInputText id="nom_sub" [(ngModel)]="subscriber.nom_sub" required/>
+                        <input pInputText id="nom_subscriber" [(ngModel)]="subscriber.nom_subscriber" required/>
                     </div>
                 </div>
             </div>
@@ -43,10 +43,10 @@
             <div class="ui-g ui-fluid">
                 <div class="ui-g-12">
                     <div class="ui-g-4">
-                        <label for="prenom_sub">Prénom</label>
+                        <label for="prenom_subscriber">Prénom</label>
                     </div>
                     <div class="ui-g-8">
-                        <input pInputText id="prenom_sub" [(ngModel)]="subscriber.prenom_sub" required/>
+                        <input pInputText id="prenom_subscriber" [(ngModel)]="subscriber.prenom_subscriber" required/>
                     </div>
                 </div>
             </div>
