--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -6,6 +6,8 @@
     color: #f8f9fa;
     width: 1349px;
     height: 70px;
-    margin-bottom: -19px;
+    margin-bottom: -18px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    box-shadow: 5px 14px 10px 0px #6c757d66;
+    position:fixed;
 }
