--- a/src/app/components/abonnement/abonnement.component.html
+++ b/src/app/components/abonnement/abonnement.component.html
@@ -1,12 +1,12 @@
 <div class="ui-g">
     <p-toast></p-toast>
     <p-confirmDialog header="Confirmation" acceptLabel="Oui" rejectLabel="Non" icon="pi pi-exclamation-triangle"></p-confirmDialog>
-    <p-panel header="Gestion de services" [style]="{'width':'80%'}">
+    <p-panel header="Gestion d'abonnements" [style]="{'width':'80%'}">
         <div style="margin-bottom: 20px;">
             <p-menubar [model]="items"></p-menubar>
         </div>
-        <p-table [value]="servicesMichoc" [columns]="cols" selectionMode="single" [(selection)]="serviceMichoc" 
-        dataKey="id_service" [paginator]="true" [rows]="4" >
+        <p-table [value]="abonnements" [columns]="cols" selectionMode="single" [(selection)]="abonnement" 
+        dataKey="id_abonnement" [paginator]="true" [rows]="4" >
             <ng-template pTemplate="header" let-columns>
                 <tr>
                     <th *ngFor="let col of columns" [pSortableColumn]="col.field">
@@ -15,16 +15,16 @@
                     </th>
                 </tr>
             </ng-template>
-            <ng-template pTemplate="body" let-serviceMichoc let-columns="columns">
-                <tr [pSelectableRow]="serviceMichoc"> 
+            <ng-template pTemplate="body" let-abonnement let-columns="columns">
+                <tr [pSelectableRow]="abonnement"> 
                     <td *ngFor="let col of columns">
-                        {{serviceMichoc[col.field]}}
+                        {{abonnement[col.field]}}
                     </td>
                 </tr>
             </ng-template>
         </p-table>
     </p-panel>
-    <p-dialog header="Nouveau service" [responsive]="true" [(visible)]="displaySaveDialog"
+    <p-dialog header="Nouveau abonnement" [responsive]="true" [(visible)]="displaySaveDialog"
         [style]="{'width': '300px', 'background':'hsl(210deg 90% 75%)'}" [modal]="true" styleClass="p-fluid">
 
         <ng-template pTemplate="content">
@@ -32,31 +32,39 @@
             <div class="ui-g ui-fluid">
                 <div class="ui-g-12">
                     <div class="ui-g-4">
-                        <label for="nom_service">Nom Service</label>
+                        <label for="type">Type</label>
                     </div>
                     <div class="ui-g-8">
-                        <input pInputText id="nom_service" [(ngModel)]="serviceMichoc.nom_service" required/>
+                        <input pInputText id="type" [(ngModel)]="abonnement.type" required/>
                     </div>
                 </div>
             </div>
 
-            <div class="ui-g ui-fluid">
+           <div class="ui-g ui-fluid">
                 <div class="ui-g-12">
                     <div class="ui-g-4">
-                        <label for="description">Description</label>
+                        <label for="tarif">Tarif</label>
                     </div>
                     <div class="ui-g-8">
-                        <textarea p-inputtextarea rows="5" cols="30" id="description" [(ngModel)]="serviceMichoc.description" required></textarea>
+                        <input pInputText id="tarif" [(ngModel)]="abonnement.tarif" required/>
                     </div>
                 </div>
             </div>
 
-            
-
+           <div class="ui-g ui-fluid">
+                <div class="ui-g-12">
+                    <div class="ui-g-4">
+                        <label for="type_forfait">Type forfait</label>
+                    </div>
+                    <div class="ui-g-8">
+                        <input pInputText id="type_forfait" [(ngModel)]="abonnement.type_forfait" required/>
+                    </div>
+                </div>
+            </div>
         </ng-template>
         <p-footer>
             <div class="ui-dialog-buttonpane ui-helper-clearfix">
-                <button type="button" pButton icon="pi pi-check" (click)="saveService()" label="Ajouter"></button>
+                <button type="button" pButton icon="pi pi-check" (click)="saveAbonnement()" label="Ajouter"></button>
             </div>
         </p-footer>
     </p-dialog>
