--- a/src/app/components/subscriber/subscriber/subscriber.component.css
+++ b/src/app/components/subscriber/subscriber/subscriber.component.css
@@ -6,3 +6,9 @@
     border-top-right-radius: 3px;
     border-top-left-radius: 3px;
 }
+select{
+    width: 248px;
+    height: 38px;
+    border-color: #ced4da;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
