--- a/src/app/components/subscriber/subscriber/subscriber.component.html
+++ b/src/app/components/subscriber/subscriber/subscriber.component.html
@@ -8,6 +8,7 @@
         </div>
         <p-table [value]="subscribers" [columns]="cols" selectionMode="single" [(selection)]="subscriber"
             dataKey="num_sim" [paginator]="true" [rows]="4">
+            
             <ng-template pTemplate="header" let-columns>
                 <tr>
                     <th *ngFor="let col of columns" [pSortableColumn]="col.field">
@@ -18,12 +19,12 @@
                     </th>
                 </tr>
             </ng-template>
+
             <ng-template pTemplate="body" let-subscriber let-columns="columns">
                 <tr [pSelectableRow]="subscriber" >
                     <td *ngFor="let col of columns">
                         {{subscriber[col.field]}}
                     </td>
-                </tr>
             </ng-template>
         </p-table>
     </p-panel>
@@ -64,21 +65,20 @@
                 </div>
             </div>
 
-            
             <div class="ui-g ui-fluid">
                 <div class="ui-g-12">
                     <div class="ui-g-4">
-                        <label for="service">Service</label>
+                        <label for="fonction">Service</label>
                     </div>
                     <div class="ui-g-8">
-                        <p-dropdown [options]="services" [(ngModel)]="selectedService"  placeholder="Service" optionLabel="nom_service"[showClear]="true" [virtualScroll]="true" >
-                            {{selectedService ? selectedService.id_service : 'none'}}
-                        </p-dropdown>
-
+                        <select class="ui-g-8" name="service" id="service" [(ngModel)]="service">
+                            <option *ngFor="let service of services" [ngValue]="service.id_service">{{service.nom_service}}</option>
+                        </select>
                     </div>
                 </div>
             </div>
-
+            
+{{service}}
             <div class="ui-g ui-fluid">
                 <div class="ui-g-12">
                     <div class="ui-g-4">
