--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,2 +1,12 @@
-<div class="p-d-flex"><i class='pi pi-fw pi-home' style="margin-right: 10px;font-size: 2rem;"></i><span>Float IAM</span></div>
-
+<div class="p-d-flex">
+    <i class='pi pi-fw pi-home' style="margin-right: 10px;font-size: 2rem;"></i>
+    <span>Float IAM</span>
+    <div class="p-grid">
+        <div class="p-col-12 p-md-4">
+            <div class="card">
+                <p-avatar  icon="pi pi-user" pBadge value="4"  severity="success" styleClass="p-mr-2" size="large">
+                </p-avatar>
+            </div>
+        </div>
+    </div>
+</div>
