--- a/src/app/components/subscriber/subscriber/subscriber.component.html
+++ b/src/app/components/subscriber/subscriber/subscriber.component.html
@@ -58,7 +58,7 @@
             <div class="ui-g ui-fluid">
                 <div class="ui-g-12">
                     <div class="ui-g-8">
-                        <label for="integeronly">Numéro SIM</label>
+                        <label for="num_sim">Numéro SIM</label>
                         <p-inputNumber inputId="num_sim" [(ngModel)]="subscriber.num_sim">
                         </p-inputNumber>
                     </div>
