--- a/src/app/components/materiel/materiel.component.html
+++ b/src/app/components/materiel/materiel.component.html
@@ -1,24 +1,32 @@
 <div class="ui-g" style=" width: 1093px;">
     <p-toast></p-toast>
-    <p-confirmDialog header="Confirmation" acceptLabel="Oui" rejectLabel="Non" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+    <p-confirmDialog header="Confirmation" acceptLabel="Oui" rejectLabel="Non" icon="pi pi-exclamation-triangle">
+    </p-confirmDialog>
     <p-panel header="Gestion de materiels" [style]="{'width':'80%'}">
         <div style="margin-bottom: 20px;">
             <p-menubar [model]="items"></p-menubar>
         </div>
-        <p-table [value]="materiels" [columns]="cols" selectionMode="single" [(selection)]="materiel" 
-        dataKey="serial_number" [paginator]="true" [rows]="4" >
+        <p-table [value]="materiels" [columns]="cols" selectionMode="single" [(selection)]="materiel"
+            dataKey="serial_number" [paginator]="true" [rows]="4">
             <ng-template pTemplate="header" let-columns>
                 <tr>
                     <th *ngFor="let col of columns" [pSortableColumn]="col.field">
                         {{col.header}}
-                        <p-sortIcon [field]="col.field" ariaLabel="Activate to sort" ariaLabelDesc="Activate to sort in descending order" arialLabelAsc="Activate to sort in ascending order" ></p-sortIcon>
+                        <p-sortIcon [field]="col.field" ariaLabel="Activate to sort"
+                            ariaLabelDesc="Activate to sort in descending order"
+                            arialLabelAsc="Activate to sort in ascending order"></p-sortIcon>
                     </th>
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-materiel let-columns="columns">
-                <tr [pSelectableRow]="materiel"> 
+                <tr [pSelectableRow]="materiel">
                     <td *ngFor="let col of columns">
                         {{materiel[col.field]}}
+
+                    </td>
+                    <td>
+                        <p-selectButton [options]="stateOptions" [(ngModel)]="value1" optionLabel="label"
+                            optionValue="value"></p-selectButton>
                     </td>
                 </tr>
             </ng-template>
@@ -39,24 +47,24 @@
                 </div>
             </div>
 
-<div class="ui-g ui-fluid">
+            <div class="ui-g ui-fluid">
                 <div class="ui-g-12">
                     <div class="ui-g-4">
                         <label for="nom">Nom</label>
                     </div>
                     <div class="ui-g-8">
-                        <input pInputText id="nom" [(ngModel)]="materiel.nom" required/>
+                        <input pInputText id="nom" [(ngModel)]="materiel.nom" required />
                     </div>
                 </div>
             </div>
 
-<div class="ui-g ui-fluid">
+            <div class="ui-g ui-fluid">
                 <div class="ui-g-12">
                     <div class="ui-g-4">
                         <label for="model">Model</label>
                     </div>
                     <div class="ui-g-8">
-                        <input pInputText id="model" [(ngModel)]="materiel.model" required/>
+                        <input pInputText id="model" [(ngModel)]="materiel.model" required />
                     </div>
                 </div>
             </div>
@@ -68,21 +76,24 @@
                         <label for="description">Description</label>
                     </div>
                     <div class="ui-g-8">
-                        <textarea p-inputtextarea rows="5" cols="30" id="description" [(ngModel)]="materiel.description" required></textarea>
+                        <textarea p-inputtextarea rows="5" cols="30" id="description" [(ngModel)]="materiel.description"
+                            required></textarea>
                     </div>
                 </div>
             </div>
 
-<div class="ui-g ui-fluid">
+            <div class="ui-g ui-fluid">
                 <div class="ui-g-12">
                     <div class="ui-g-4">
                         <label for="type">Type</label>
                     </div>
                     <div class="ui-g-8">
-                        <input pInputText id="type" [(ngModel)]="materiel.type" required/>
+                        <input pInputText id="type" [(ngModel)]="materiel.type" required />
                     </div>
                 </div>
             </div>
+
+            
 
         </ng-template>
         <p-footer>
