--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <div style="display:flex;">
     <div style=" margin-right: 0px; width: 420px;">
         <app-header></app-header>
@@ -8,3 +9,4 @@
         <router-outlet></router-outlet>
     </div>
 </div>
+<!--app-auth></app-auth-->
