--- a/src/app/components/facture/facture.component.html
+++ b/src/app/components/facture/facture.component.html
@@ -8,7 +8,7 @@
         </div>
         <p-table [value]="factures" [columns]="cols" selectionMode="single" [(selection)]="facture"
             dataKey="num_facture" [paginator]="true" [rows]="4">
-            
+
             <ng-template pTemplate="header" let-columns>
                 <tr>
                     <th *ngFor="let col of columns" [pSortableColumn]="col.field">
@@ -21,7 +21,7 @@
             </ng-template>
 
             <ng-template pTemplate="body" let-facture let-columns="columns">
-                <tr [pSelectableRow]="facture" >
+                <tr [pSelectableRow]="facture">
                     <td *ngFor="let col of columns">
                         {{facture[col.field]}}
                     </td>
@@ -36,7 +36,7 @@
             <div class="ui-g ui-fluid">
                 <div class="ui-g-12">
                     <div class="ui-g-8">
-                        <label for="num_facture">Numero facture</label>
+                        <label for="num_facture">Numéro facture</label>
                         <p-inputNumber inputId="num_facture" [(ngModel)]="facture.num_facture">
                         </p-inputNumber>
                     </div>
@@ -49,7 +49,7 @@
                     <label for="date_facture">Date Facture</label>
                     <p-calendar inputId="date_facture" [(ngModel)]="facture.date_facture"></p-calendar>
                 </div>
-                </div>
+            </div>
 
             <div class="ui-g ui-fluid">
                 <div class="ui-g-12">
@@ -68,14 +68,15 @@
                     </div>
                     <div class="ui-g-8">
                         <select class="ui-g-8" name="subscriber" id="subscriber" [(ngModel)]="subscriber">
-                            <option *ngFor="let subscriber of subscribers" [ngValue]="subscriber.id_subscriber">{{subscriber.num_sim}}</option>
+                            <option *ngFor="let subscriber of subscribers" [ngValue]="subscriber.id_subscriber">
+                                {{subscriber.num_sim}}</option>
                         </select>
                     </div>
                 </div>
             </div>
-            
-{{subscriber}}
-            
+
+            {{subscriber}}
+
 
 
         </ng-template>
