--- a/src/app/components/materiel/materiel.component.html
+++ b/src/app/components/materiel/materiel.component.html
@@ -25,7 +25,7 @@
 
                     </td>
                     <td>
-                        <p-selectButton [options]="stateOptions" [(ngModel)]="value1" optionLabel="label"
+                        <p-selectButton  [options]="stateOptions" [(ngModel)]="value1" optionLabel="label"
                             optionValue="value"></p-selectButton>
                     </td>
                 </tr>
@@ -102,4 +102,32 @@
             </div>
         </p-footer>
     </p-dialog>
+
+    <p-dialog header="Information subscriber" [responsive]="true" [(visible)]="displayInfo"
+    [style]="{'width': '300px', 'background':'hsl(210deg 90% 75%)'}" [modal]="true" styleClass="p-fluid">
+
+    <ng-template pTemplate="content">
+
+
+       <div class="ui-g ui-fluid">
+        <div class="ui-g-12">
+            <div class="ui-g-4">
+                <label for="abonnement">Subscribers</label>
+            </div>
+            <div class="ui-g-8">
+                <select class="ui-g-8" name="subscriber" id="subscriber" [(ngModel)]="subscriber">
+                    <option *ngFor="let subscriber of subscribers" [ngValue]="subscriber.id_subscriber">{{subscriber.num_sim}}</option>
+                </select>
+            </div>
+        </div>
+    </div>
+
+    </ng-template>
+    <p-footer>
+        <div class="ui-dialog-buttonpane ui-helper-clearfix">
+            <button type="button" pButton icon="pi pi-check" (click)="giveMateriel()" label="Ajouter"></button>
+        </div>
+    </p-footer>
+</p-dialog>
+
 </div>
