--- a/src/app/components/subscriber/subscriber/subscriber.component.html
+++ b/src/app/components/subscriber/subscriber/subscriber.component.html
@@ -117,7 +117,7 @@
            <div class="ui-g ui-fluid">
             <div class="ui-g-12">
                 <div class="ui-g-4">
-                    <label for="abonnement">Abonnement</label>
+                    <label for="abonnement"><b>Abonnement</b></label>
                 </div>
                 <div class="ui-g-8">
                     <select class="ui-g-8" name="abonnement" id="abonnement" [(ngModel)]="abonnement">
@@ -126,7 +126,7 @@
                 </div>
             </div>
         </div>
-
+                  {{abonnement}}
         </ng-template>
         <p-footer>
             <div class="ui-dialog-buttonpane ui-helper-clearfix">
