--- a/src/app/components/facture/facture.component.html
+++ b/src/app/components/facture/facture.component.html
@@ -17,6 +17,12 @@
                             ariaLabelDesc="Activate to sort in descending order"
                             arialLabelAsc="Activate to sort in ascending order"></p-sortIcon>
                     </th>
+                    <th>
+                        Subscriber
+                        <p-sortIcon  ariaLabel="Activate to sort"
+                        ariaLabelDesc="Activate to sort in descending order"
+                        arialLabelAsc="Activate to sort in ascending order"></p-sortIcon>
+                    </th>
                 </tr>
             </ng-template>
 
@@ -24,6 +30,9 @@
                 <tr [pSelectableRow]="facture">
                     <td *ngFor="let col of columns">
                         {{facture[col.field]}}
+                    </td>
+                    <td>
+                        {{facture.subscriber.num_sim}}
                     </td>
             </ng-template>
         </p-table>
