--- a/src/app/components/subscriber/subscriber/subscriber.component.css
+++ b/src/app/components/subscriber/subscriber/subscriber.component.css
@@ -12,3 +12,6 @@ select{
     border-color: #ced4da;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+b{
+    margin: 10px !important;
+}
