--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -10,6 +10,7 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     box-shadow: 5px 14px 10px 0px #6c757d66;
     position:fixed;
+    padding-left: 35px;
 }
 
 p-avatar {
